--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,8 @@
 <resources>
+
     <string name="app_name">MathScanner</string>
+    <string name="operation">Operation:</string>
+    <string name="result">Result:</string>
+    <string name="empty_animation_description">Tap below button to start scanning images</string>
+
 </resources>
