--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,6 +8,7 @@
     <string name="empty_animation_description">Tap below button to start scanning images</string>
     <string name="settings_title">Settings</string>
     <string name="setting_storage_type_title">Select storage type</string>
+    <string name="toast_data_location_info">This data is saved in %1$s</string>
 
     <string name="permission_rationale_title">Permission Required</string>
     <string name="permission_denied_title">Permission Denied</string>
